--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,13 @@
     "test": "jest --watchAll --verbose",
     "start": "node server-starter.js",
     "dev": "nodemon server-starter.js",
-    "cov" : "jest --watchAll --coverage"
+    "cov": "jest --watchAll --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1"
   },
   "devDependencies": {
